--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,6 @@ services:
     volumes:
       - '.:/product-register'
     environment:
-      - 'POSTGRES_USER=postgres'
       - 'POSTGRES_PASSWORD=postgres'
     tty: true
     stdin_open: true
@@ -24,3 +23,7 @@ services:
     image: postgres
     volumes: 
       - 'db-data:/var/lib/postgresql/data'
+    environment:
+      - 'POSTGRES_USER=postgres'
+      - 'POSTGRES_PASSWORD=postgres'
+      - 'POSTGRES_HOST_AUTH_METHOD=trust'
